@startuml
skinparam packageStyle rectangle

package model {
  class Book {
    +isbn: String
    +title: String
    +author: String
    +publicationYear: int
  }

  class BookItem {
    +copyId: String
    +isbn: String
    +available: boolean
  }

  class Patron {
    +id: String
    +name: String
    +email: String
  }

  class Loan {
    +id: String
    +copyId: String
    +patronId: String
    +checkoutDate: LocalDate
    +dueDate: LocalDate
    +returnDate: LocalDate
  }
}

package repository {
  interface BookRepository
  interface BookItemRepository
  interface PatronRepository
  interface LoanRepository
}

package service {
  class BookService
  class PatronService
  class LendingService
  class SearchService
  class ShortIdGenerator
}

package search {
  interface SearchStrategy
  class TitleSearchStrategy
  class AuthorSearchStrategy
  class IsbnSearchStrategy
  class SearchStrategyFactory
}

Book "1" -- "*" BookItem
Patron "1" -- "*" Loan
BookItem "1" -- "0..1" Loan

BookService --> BookRepository
BookService --> BookItemRepository
PatronService --> PatronRepository
PatronService --> LoanRepository
LendingService --> BookItemRepository
LendingService --> LoanRepository
SearchService --> SearchStrategyFactory

SearchStrategyFactory ..> TitleSearchStrategy
SearchStrategyFactory ..> AuthorSearchStrategy
SearchStrategyFactory ..> IsbnSearchStrategy

TitleSearchStrategy ..> BookRepository
AuthorSearchStrategy ..> BookRepository
IsbnSearchStrategy ..> BookRepository

@enduml